# mini-langgraph-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
benches/: python_bench.py  throughput.rs
docs/doc/: implementation_scope_core_graph.md  implementation_scope_out_of_scope.md  implementation_scope_persistence.md  implementation_scope_runtime.md  implementation_scope_state_channels.md  project_background.md  rust_improvements_over_original.md
docs/plan/: benchmark_and_example.md  implement_attach_branch.md  implement_compiled_state_graph.md  implement_execute_task.md  implement_memory_checkpoint.md  implement_mvp_invoke_and_stream_api.md  implement_pregel.md  implement_pregel_loop_apply_writes.md  implement_pregel_loop_enter_first.md  implement_pregel_loop_execute.md  implement_pregel_loop_tick.md  implement_pregel_node.md  implement_pregel_stream.md  implement_pregel_stream_items.md  implement_pregel_task_stubs.md  implement_prepare_tasks.md  implement_state_schema_trait.md  implement_sync_pregel_loop_stub.md  reset_pregel_task_manager_stubs.md
examples/: plan_execute_review.rs
src/: error.rs  lib.rs
src/channel/: binop.rs  channel_writer.rs  ephemeral_value.rs  last_value.rs  mod.rs  named_barrier_value.rs
src/checkpoint/: memory.rs  mod.rs  saver.rs
src/graph/: branch.rs  compiled.rs  consts.rs  mod.rs  node.rs  schema.rs  state.rs  waiting_edge.rs
src/managed/: mod.rs
src/pregel/: consts.rs  loops.rs  mod.rs  node.rs  pregel.rs  task.rs
src/runtime/: mod.rs
tests/: mvp_runtime.rs
