[package]
name = "mini-langgraph-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false